log/build_2024-12-06_15-55-18/autonomous_rov/stderr.log
  File "/home/mir/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov/listenerMIR.py", line 250
    self.get_logger().info("Mode correction, Current correction value : " self.Correction_yaw)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

